[util,sigma_circuits] 210505 sigma circuit experiment segmentation.

--- a/paulssonlab/src/paulssonlab/projects/sigma_circuits/210507 Analysis JQS.ipynb
+++ b/paulssonlab/src/paulssonlab/projects/sigma_circuits/210507 Analysis JQS.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "synthetic-treaty",
+   "id": "intelligent-respect",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "recognized-coach",
+   "id": "metallic-niger",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "elder-arcade",
+   "id": "integral-resistance",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "leading-southeast",
+   "id": "infectious-angola",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "equivalent-sauce",
+   "id": "specific-thursday",
    "metadata": {},
    "source": [
     "# Load data"
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "emerging-harvard",
+   "id": "powered-monster",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "instructional-badge",
+   "id": "raised-recording",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,13 +93,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dying-internship",
+   "id": "occupational-proposition",
    "metadata": {},
    "outputs": [],
    "source": [
     "# filename = \"/n/groups/paulsson/jqs1/sigma-circuits/210329_expt210324flipped.pickle\"\n",
     "# filename = \"/n/groups/paulsson/jqs1/sigma-circuits/210329_expt210204nonflipped_psc101.pickle\"\n",
-    "filename = \"/n/groups/paulsson/jqs1/sigma-circuits/210402_expt210331ramp.pickle\"\n",
+    "# filename = \"/n/groups/paulsson/jqs1/sigma-circuits/210402_expt210331ramp.pickle\"\n",
+    "filename = \"/n/groups/paulsson/jqs1/sigma-circuits/210507_expt210505.pickle\"\n",
     "data = pickle.load(open(filename, \"rb\"))\n",
     "df = data[\"table\"]\n",
     "md = data[\"metadata\"]\n",
@@ -110,7 +111,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "advance-setup",
+   "id": "initial-nepal",
    "metadata": {},
    "source": [
     "# Acquisition times"
@@ -119,7 +120,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "exclusive-residence",
+   "id": "solved-project",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "reflected-buffalo",
+   "id": "blocked-student",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "closing-discovery",
+   "id": "bizarre-princess",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aggregate-yorkshire",
+   "id": "hungry-wheel",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "peripheral-zoning",
+   "id": "artistic-directory",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "boring-apache",
+   "id": "arabic-assessment",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "gothic-diabetes",
+   "id": "universal-inspector",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "complimentary-porcelain",
+   "id": "oriental-diagram",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +211,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "virtual-shanghai",
+   "id": "developed-blanket",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "recent-reviewer",
+   "id": "activated-amino",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +234,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "compressed-essay",
+   "id": "structural-joining",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +244,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "english-norfolk",
+   "id": "patient-daniel",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +253,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "acoustic-works",
+   "id": "engaged-understanding",
    "metadata": {},
    "source": [
     "# Filtered"
@@ -261,7 +262,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "chubby-concern",
+   "id": "portable-albany",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +284,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "herbal-findings",
+   "id": "operating-reducing",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +308,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "prescription-arena",
+   "id": "expanded-integrity",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,7 +318,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "amateur-rachel",
+   "id": "generic-perception",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,7 +328,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "organized-ordinance",
+   "id": "instructional-learning",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,7 +340,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "material-jesus",
+   "id": "acquired-moisture",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +368,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bronze-threat",
+   "id": "liberal-orange",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,7 +392,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "italian-builder",
+   "id": "extended-decision",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,7 +401,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "decreased-astronomy",
+   "id": "stopped-differential",
    "metadata": {},
    "source": [
     "## Heatmap"
@@ -409,7 +410,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "social-edmonton",
+   "id": "interior-warning",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -421,17 +422,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "measured-exploration",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "heatmap.index.levels[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fabulous-steam",
+   "id": "written-checklist",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -447,7 +438,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "gross-paris",
+   "id": "excess-oasis",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -457,7 +448,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "brilliant-tulsa",
+   "id": "polish-bhutan",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -469,7 +460,7 @@
     "            logz=True,\n",
     "            clim=(1, 1e4),\n",
     "        )\n",
-    "        for row in (\"A\", \"D\", \"E\", \"G\")\n",
+    "        for row in (\"A\", \"B\", \"C\", \"D\", \"E\", \"F\")\n",
     "    ]\n",
     ").cols(1)"
    ]
@@ -477,7 +468,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "resident-texture",
+   "id": "nonprofit-mailman",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -496,7 +487,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fitted-trouble",
+   "id": "portable-business",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -506,7 +497,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dynamic-mathematics",
+   "id": "subtle-ukraine",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -524,47 +515,9 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "dressed-iraqi",
-   "metadata": {},
-   "source": [
-    "## Logs"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "romance-giving",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(experiment_txt)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "adapted-picking",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mux_log"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "practical-acceptance",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mux_timepoints"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "white-amateur",
+   "id": "authorized-documentary",
    "metadata": {},
    "outputs": [],
    "source": []
