--- a/paulssonlab/src/paulssonlab/projects/sigma_circuits/210507 Segmentation.ipynb
+++ b/paulssonlab/src/paulssonlab/projects/sigma_circuits/210507 Segmentation.ipynb
@@ -165,8 +165,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nd2_filename = \"/n/scratch3/groups/hms/sysbio/paulsson/jqs1/210331/ramp.nd2\"\n",
-    "# nd2_filename = \"/n/scratch3/groups/hms/sysbio/paulsson/jqs1/210204/psc101_bistable.nd2\"\n",
+    "nd2_filename = (\n",
+    "    \"/n/scratch3/groups/hms/sysbio/paulsson/jqs1/210505/ramp_flipped_backbone.nd2\"\n",
+    ")\n",
     "nd2 = matriarch_stub.get_nd2_reader(nd2_filename)"
    ]
   },
@@ -390,19 +391,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# filename = \"/n/groups/paulsson/jqs1/sigma-circuits/210329_expt210324flipped.pickle\"\n",
-    "# filename = \"/n/groups/paulsson/jqs1/sigma-circuits/210329_expt210204nonflipped_psc101.pickle\"\n",
-    "filename = \"/n/groups/paulsson/jqs1/sigma-circuits/210402_expt210331ramp.pickle\"\n",
+    "filename = \"/n/groups/paulsson/jqs1/sigma-circuits/210507_expt210505.pickle\"\n",
     "with open(filename, \"wb\") as f:\n",
     "    pickle.dump(data, f)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
