[shenker/cloning] WIP cloning notebooks.

--- a/paulssonlab/src/paulssonlab/shenker/cloning/210401 NAO strains import.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/210401 NAO strains import.ipynb
@@ -37,7 +37,8 @@
     "import paulssonlab.cloning.util as cloning_util\n",
     "import paulssonlab.cloning.sequence as sequence\n",
     "import paulssonlab.cloning.registry as registry\n",
-    "import paulssonlab.cloning.enzyme as enzyme"
+    "import paulssonlab.cloning.enzyme as enzyme\n",
+    "import paulssonlab.cloning.commands as commands"
    ]
   },
   {
@@ -92,15 +93,6 @@
     "strains_sheet = nao_sheets.worksheet(value=2)\n",
     "tus = tus_sheet.get_as_df()\n",
     "strains = strains_sheet.get_as_df()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tus_sheet.get_as_df?"
    ]
   },
   {
@@ -254,8 +246,8 @@
    "source": [
     "tu_to_command = {}\n",
     "for _, row in tus.iterrows():\n",
-    "    uns_a = row[\"UNS_A\"]\n",
-    "    uns_e = row[\"UNS_E\"]\n",
+    "    uns_a = str(row[\"UNS_A\"]).replace(\"*\", \"_r\")\n",
+    "    uns_e = str(row[\"UNS_E\"]).replace(\"*\", \"_r\")\n",
     "    promoter = name_map[str(row[\"Promoter (pLIB number or 3G part ID) \"])]\n",
     "    rbs = name_map[str(row[\"Ribosome binding site (pLIB number or 3G part ID) \"])]\n",
     "    cds = name_map[str(row[\"Coding region (pLIB number or 3G part ID) \"])]\n",
@@ -270,9 +262,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "strains.tail()[\"TUs\"].map(\n",
-    "    lambda s: \", \".join([tu_to_command[int(t)] for t in str(s).split(\",\")])\n",
-    ").values"
+    "tu_to_command[193]"
    ]
   },
   {
@@ -281,7 +271,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tu_to_command"
+    "strains = strains.loc[:, \"TUs\":]\n",
+    "strains = strains[strains[\"TUs\"].str.len() != 0]"
    ]
   },
   {
@@ -289,7 +280,104 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "strains"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "strains[\"Plasmids\"].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "backbone_pcrs = {\n",
+    "    \"\": \"V37m_UNS1_UNS10\",\n",
+    "    \"p15A\": \"JUMP_p15a_UNS1_UNS10\",\n",
+    "    \"pSC101\": \"JUMP_pSC101_UNS1_UNS10\",\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "strains[\"command\"] = strains.apply(\n",
+    "    lambda row: \"@Gib({}, {})\".format(\n",
+    "        \", \".join([tu_to_command[int(t)] for t in str(row[\"TUs\"]).split(\",\")]),\n",
+    "        backbone_pcrs[row[\"Plasmids\"]],\n",
+    "    ),\n",
+    "    axis=1,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "strains[\"command\"].tail().values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "strains.loc[152:158][\"command\"].values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# L3S1P13, L3S3P11, L3S2P55, L3S2P11"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def eval_command(cmd, registry, context=None):\n",
+    "    ctx = commands.CommandContext(registry, context)\n",
+    "    return commands.command_parser.parse(\n",
+    "        cmd, semantics=commands.CommandSemantics(commands._commands, ctx)\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res = eval_command(strains.loc[152][\"command\"], reg, context=\"pLIB\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res"
+   ]
   }
  ],
  "metadata": {
@@ -308,7 +396,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
