[sigma_circuits] Analysis of 210511 sigma factor experiment.

--- a/paulssonlab/src/paulssonlab/projects/sigma_circuits/210514 Analysis JQS.ipynb
+++ b/paulssonlab/src/paulssonlab/projects/sigma_circuits/210514 Analysis JQS.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "intelligent-respect",
+   "id": "oriental-contamination",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "metallic-niger",
+   "id": "straight-lying",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "integral-resistance",
+   "id": "numerous-scratch",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "infectious-angola",
+   "id": "lasting-meaning",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "specific-thursday",
+   "id": "awful-jurisdiction",
    "metadata": {},
    "source": [
     "# Load data"
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "powered-monster",
+   "id": "fleet-momentum",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "raised-recording",
+   "id": "antique-israel",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,14 +93,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "occupational-proposition",
+   "id": "center-investigator",
    "metadata": {},
    "outputs": [],
    "source": [
     "# filename = \"/n/groups/paulsson/jqs1/sigma-circuits/210329_expt210324flipped.pickle\"\n",
     "# filename = \"/n/groups/paulsson/jqs1/sigma-circuits/210329_expt210204nonflipped_psc101.pickle\"\n",
     "# filename = \"/n/groups/paulsson/jqs1/sigma-circuits/210402_expt210331ramp.pickle\"\n",
-    "filename = \"/n/groups/paulsson/jqs1/sigma-circuits/210507_expt210505.pickle\"\n",
+    "# filename = \"/n/groups/paulsson/jqs1/sigma-circuits/210507_expt210505.pickle\"\n",
+    "filename = \"/n/groups/paulsson/jqs1/sigma-circuits/210514_expt210511.pickle\"\n",
     "data = pickle.load(open(filename, \"rb\"))\n",
     "df = data[\"table\"]\n",
     "md = data[\"metadata\"]\n",
@@ -111,7 +112,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "initial-nepal",
+   "id": "atmospheric-lying",
    "metadata": {},
    "source": [
     "# Acquisition times"
@@ -120,7 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "solved-project",
+   "id": "searching-tobacco",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +131,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "blocked-student",
+   "id": "bound-scheduling",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bizarre-princess",
+   "id": "dense-trinidad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +160,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "hungry-wheel",
+   "id": "incorporate-action",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "artistic-directory",
+   "id": "biological-replica",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +180,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "arabic-assessment",
+   "id": "mediterranean-barbados",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +190,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "universal-inspector",
+   "id": "loaded-george",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "oriental-diagram",
+   "id": "introductory-inspection",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +212,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "developed-blanket",
+   "id": "collaborative-toyota",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +222,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "activated-amino",
+   "id": "handed-environment",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,7 +235,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "structural-joining",
+   "id": "above-prior",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +245,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "patient-daniel",
+   "id": "instant-title",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +254,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "engaged-understanding",
+   "id": "extensive-ivory",
    "metadata": {},
    "source": [
     "# Filtered"
@@ -262,7 +263,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "portable-albany",
+   "id": "incorrect-cologne",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +285,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "operating-reducing",
+   "id": "complete-symphony",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,21 +295,13 @@
     "cells[\"dist_from_center\"] = np.sqrt(\n",
     "    (cells[\"centroid-0\"] - sensor_width) ** 2\n",
     "    + (cells[\"centroid-1\"] - sensor_height) ** 2\n",
-    ")\n",
-    "filtered_cells = cells[\n",
-    "    cells[\"area\"].between(200, 800)\n",
-    "    & cells[\"GFP-PENTA\"].between(100, 4000)\n",
-    "    & cells[\"RFP-PENTA\"].between(475, 4000)\n",
-    "    & ~cells[\"row\"].isin([\"F\"])\n",
-    "    & cells[\"dist_from_center\"]\n",
-    "    < 3000\n",
-    "][[\"GFP-PENTA\", \"RFP-PENTA\", \"area\", \"row\", \"pos\", \"t\"]]"
+    ")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "expanded-integrity",
+   "id": "purple-tobacco",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "generic-perception",
+   "id": "loved-dublin",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,7 +321,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "instructional-learning",
+   "id": "cc63caea-90b6-49e9-b465-1139d21eb601",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cells[\"GFP-PENTA\"][cells[\"GFP-PENTA\"].between(100, 8e3)].hvplot.hist(bins=300)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "literary-shower",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,7 +343,25 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "acquired-moisture",
+   "id": "345df937-6953-4ac6-a957-0d65338ce948",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "filtered_cells = cells[\n",
+    "    cells[\"area\"].between(200, 800)\n",
+    "    & cells[\"GFP-PENTA\"].between(100, 8000)\n",
+    "    & cells[\"RFP-PENTA\"].between(475, 4000)\n",
+    "    # & ~cells[\"row\"].isin([\"F\"])\n",
+    "    # & (cells[\"dist_from_center\"] < 3000)\n",
+    "    & (cells[\"t\"] <= 169)\n",
+    "][[\"GFP-PENTA\", \"RFP-PENTA\", \"area\", \"row\", \"pos\", \"t\"]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "present-kidney",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,7 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "liberal-orange",
+   "id": "horizontal-trinity",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -392,7 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "extended-decision",
+   "id": "16fb0700-02e6-4c95-bb23-befe5c66c65c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,7 +422,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "stopped-differential",
+   "id": "suburban-toyota",
    "metadata": {},
    "source": [
     "## Heatmap"
@@ -410,24 +431,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "interior-warning",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bins = np.geomspace(\n",
-    "    filtered_cells[\"GFP-PENTA\"].min(), filtered_cells[\"GFP-PENTA\"].max(), 100\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "written-checklist",
+   "id": "focal-samuel",
    "metadata": {},
    "outputs": [],
    "source": [
     "%%time\n",
     "channel = \"GFP-PENTA\"\n",
+    "bins = np.geomspace(filtered_cells[channel].min(), filtered_cells[channel].max(), 100)\n",
     "heatmap = filtered_cells.groupby([\"row\", \"t\"]).apply(\n",
     "    lambda x: pd.Series(np.histogram(x[channel], bins=bins)[0], index=bins[:-1])\n",
     ")\n",
@@ -438,17 +448,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "excess-oasis",
+   "id": "forbidden-expense",
    "metadata": {},
    "outputs": [],
    "source": [
-    "heatmap.A.hvplot.quadmesh(cmap=\"blues\", logy=True, logz=True, clim=(1, 1e4))"
+    "heatmap.D.hvplot.quadmesh(cmap=\"blues\", logy=True, logz=True, clim=(1, 1e4))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "polish-bhutan",
+   "id": "specified-heating",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -460,7 +470,7 @@
     "            logz=True,\n",
     "            clim=(1, 1e4),\n",
     "        )\n",
-    "        for row in (\"A\", \"B\", \"C\", \"D\", \"E\", \"F\")\n",
+    "        for row in (\"A\", \"B\", \"C\", \"D\", \"E\", \"F\", \"G\", \"H\")\n",
     "    ]\n",
     ").cols(1)"
    ]
@@ -468,12 +478,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "nonprofit-mailman",
+   "id": "psychological-intention",
    "metadata": {},
    "outputs": [],
    "source": [
     "%%time\n",
     "channel = \"GFP-PENTA\"\n",
+    "bins = np.geomspace(filtered_cells[channel].min(), filtered_cells[channel].max(), 100)\n",
     "heatmap_pos = filtered_cells.groupby([\"pos\", \"t\"]).apply(\n",
     "    lambda x: pd.Series(np.histogram(x[channel], bins=bins)[0], index=bins[:-1])\n",
     ")\n",
@@ -487,7 +498,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "portable-business",
+   "id": "adjustable-attitude",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -497,7 +508,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "subtle-ukraine",
+   "id": "apart-contamination",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -517,7 +528,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "authorized-documentary",
+   "id": "champion-freeze",
    "metadata": {},
    "outputs": [],
    "source": []
