WIP GDrive ORM.

--- a/paulssonlab/src/paulssonlab/shenker/cloning/210517 SigW storage vectors.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/210517 SigW storage vectors.ipynb
@@ -80,6 +80,148 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Registry test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO: change all .gbk's to .gb's (in code, google drive?)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# FileClient use cases:\n",
+    "# - upload folder of .ab1's (from disk, without parsing)\n",
+    "c.set_from_file(\"pLIB269\", \"../path/210518sequencing\")\n",
+    "c[\"pLIB269\"] = {\"pLIB269_oLIB170.ab1\": Seq(), \"pLIB269_oLIB170.ab1\": Seq()}\n",
+    "c.raw[\"pLIB269\"] = {\"pLIB269_oLIB170.ab1\": \"...\", \"pLIB269_oLIB170.ab1\": \"...\"}\n",
+    "# - upload single .fasta (from disk, output of nextflow pipeline, without parsing)\n",
+    "c.set_from_file(\"pLIB269\", \"../path/consensus.gb\")\n",
+    "c[\"pLIB269\"] = Seq(\"aaaa\")\n",
+    "c.raw[\"pLIB269\"] = {\n",
+    "    \"content\": \"hhhh\",\n",
+    "}\n",
+    "c.content[\"pLIB269\"]  # -> \"hhhh\"\n",
+    "c.content[\"pLIB269\"] = \"x\"  # -> NotImplementedError\n",
+    "# - upload plasmid map (from addgene url or from disk, without parsing)\n",
+    "c[\"pLIB269\"] = DsSeqRecord(Seq(\"aaaa\"))\n",
+    "c.raw[\"pLIB269\"] = open(\"../path/..\").read()\n",
+    "c.set_from_file(\"pLIB269\", \"../path/..\")\n",
+    "# provide raw and parsed read/write (via `.raw`/`.parsed` properties?)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reg.registry"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reg.clear_cache()\n",
+    "c = reg[(\"pLIB\", \"maps\")]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c[\"pLIB269\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c.remote"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c.local"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c.files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c.gdrive_id"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "api.google.list_drive(reg.sheets_client.drive.service, root=c.gdrive_id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c._files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c = reg[(\"oLT\", \"oligos\")]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# SigW storage vectors"
    ]
   },
