WIP SigW RBS library. WIP nonempty_column_mask/get_next_empty_row. WIP SheetClient.

--- a/paulssonlab/src/paulssonlab/shenker/cloning/210517 SigW storage vectors.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/210517 SigW storage vectors.ipynb
@@ -89,7 +89,141 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "c = reg[(\"pLIB\", \"plasmids\")]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = c.worksheet.get_as_df()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "key_columns = [\"Size\", \"Marker\"]\n",
+    "key_values = (2144, \"amp\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.iloc[11]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "next(iter(df.iteritems()))[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "[\n",
+    "    key\n",
+    "    for key, row in df.iterrows()\n",
+    "    if tuple(row[col] for col in key_columns) == key_values\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c[\"pLIB112\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c.worksheet"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "api.google.sheets.nonempty_column_mask(c.worksheet)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Prototype"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# TODO: change all .gbk's to .gb's (in code, google drive?)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c[\"pLIB269\"] = Seq(\"aaaa\")\n",
+    "c[\"pLIB269\"] = {\"oLIB179\": Seq(\"aaaa\"), \"oLIB179\": Seq(\"bbbb\")}\n",
+    "c.set_from_file(\"pLIB269\", \"blah/to/file.gb\")\n",
+    "c.set_from_file(\"pLIB269\", \"blah/to/folder\")\n",
+    "\n",
+    "c.bytes[\"pLIB269.gb\"] = Seq(\"aaaa\").format(\"gb\")\n",
+    "c.bytes[\"pLIB269.gb\"] = open(\"../path/blah.gb\").read()\n",
+    "c.bytes[\"pLIB269\"] = {\"oLIB179.ab1\": \"...\", \"oLIB179.ab1\": \"...\"}\n",
+    "\n",
+    "c.raw[\"pLIB269.gb\"] = {\"mimetype\": \"blah\", \"name\": \"blah\", \"bytes\": b\"000\"}\n",
+    "c.raw[\"pLIB269.gb\"] = {\"mimetype\": \"blah\", \"name\": \"blah\", \"content\": SeqRecord(\"aaaa\")}\n",
+    "c.raw[\"pLIB269\"] = {\n",
+    "    \"mimetype\": \"folder\",\n",
+    "    \"content\": {\"oLIB169.ab1\": {\"mimetype\": \"blah\", \"name\": \"blah\", \"content\": b\"000\"}},\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c[\"pLIB269\"] = Seq(\"aaaa\")\n",
+    "c[\"pLIB269\"] = {\"oLIB179\": Seq(\"aaaa\"), \"oLIB179\": Seq(\"bbbb\")}\n",
+    "\n",
+    "c.content[\"pLIB269\", \"gb\"] = Seq(\"aaaa\").format(\"gb\")\n",
+    "c.content[\"pLIB269\", \"gb\"] = open(\"../path/blah.gb\").read()  # how to set mimetype?\n",
+    "\n",
+    "c.raw[\"pLIB269.gb\"] = {\"mimetype\": \"blah\", \"name\": \"blah\", \"content\": b\"000\"}\n",
+    "c.raw[\"pLIB269\"] = {\n",
+    "    \"oLIB169.ab1\": {\"mimetype\": \"blah\", \"name\": \"blah\", \"content\": b\"000\"}\n",
+    "}"
    ]
   },
   {
@@ -100,6 +234,9 @@
    "source": [
     "# FileClient use cases:\n",
     "# - upload folder of .ab1's (from disk, without parsing)\n",
+    "\n",
+    "# set_from_fsspec ?\n",
+    "\n",
     "c.set_from_file(\"pLIB269\", \"../path/210518sequencing\")\n",
     "c[\"pLIB269\"] = {\"pLIB269_oLIB170.ab1\": Seq(), \"pLIB269_oLIB170.ab1\": Seq()}\n",
     "c.raw[\"pLIB269\"] = {\"pLIB269_oLIB170.ab1\": \"...\", \"pLIB269_oLIB170.ab1\": \"...\"}\n",
