--- a/paulssonlab/src/paulssonlab/shenker/cloning/210517 Terminators.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/210517 Terminators.ipynb
@@ -203,7 +203,7 @@
     "# FROM: used https://www.adobe.com/acrobat/online/pdf-to-excel.html to convert\n",
     "# Table S1 (p. 23) from https://www.embopress.org/action/downloadSupplement?doi=10.15252%2Fmsb.20209584&file=msb209584-sup-0001-AppendixFig.pdf\n",
     "\n",
-    "voigt_bidirectional_terms_csv = \"\"\"\n",
+    "voigt_bidirectional_terms_tsv = \"\"\"\n",
     "name\tsequence\tTs_forward\tTs_reverse\n",
     "DT3\t\"CCGGCTTATCGGTCAGTTTCACCTGATTTACGTAAAAACCCGCTTCGGCGGGTTTTTGCTTTTGGAGGGGCAGAAAGATGAATGACTGTCCACGACGCTATACCCAAAAGAAAAAAAAAAAACCCCGCCCCTGACAGGGCGGGGTTTTTTTT\"\t\t3000\t\t\t\t120\t\t\n",
     "DT5\t\"TCCGGCAATTAAAAAAGCGGCTAACCACGCCGCTTTTTTTACGTCTGCACTCGGTACCAAATTCCAGAAAAGAGGCCTCCCGAAAGGGGGGCCTTTTTTCGTTTTGGTCC\"\t\t4700\t\t\t\t50\t\t\n",
@@ -228,7 +228,7 @@
     "import io\n",
     "\n",
     "voigt_bidirectional_terms = pd.read_csv(\n",
-    "    io.StringIO(voigt_bidirectional_terms_csv), sep=\"\\s+\", index_col=0\n",
+    "    io.StringIO(voigt_bidirectional_terms_tsv), sep=\"\\s+\", index_col=0\n",
     ")"
    ]
   },
@@ -286,8 +286,11 @@
    "outputs": [],
    "source": [
     "overhangs = [\"aggt\", \"gctt\"]\n",
-    "random_bases = (\"GCTTCA\", \"TGCTAA\")\n",
-    "flanks = (\"CGTCTCGGTCTCa\", \"tGAGACCgGAGACG\")\n",
+    "random_bases = (\n",
+    "    \"GCTTCA\",\n",
+    "    \"TGCTAA\",\n",
+    ")  # to add between BsmBI recognition site and ends of oligos\n",
+    "flanks = (\"CGTCTCGGTCTCa\", \"tGAGACCgGAGACG\")  # storage vector BsmBI flanks\n",
     "seqs_to_order = {}\n",
     "for term_name, row in selected_terms.iterrows():\n",
     "    seq = row[\"sequence\"]\n",
